# hacker-panel

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  GUIA_SOLUCION_IMAGENES.md  README.md  accesibilidad_optimizaciones.md  app.py  cert.pem  config.py  ejemplo_markdown.md  guia_migracion_pdm.md  key.pem  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
migrations/versions/: 027085ea7343_migracion_inicial.py  4293300033df_implementacion_de_recurrencia_simple.py  79c2c45e56fa_removiendo_recurrencia.py  82fa1fdfc464_eliminación_del_metodo_recurrente.py  d4ff8aa1e71a_.py  eab8ba494413_integración_de_tareas_recurrentes.py  fb58e9780911_integración_de_manejo_de_fechas_flexible.py
scripts/: NOTAS_CLEAN.md  clean_history.sh
src/forms/: data_forms.py  task_form.py
src/models/: checklist.py  glossary.py  scripts.py  task.py  theory.py  write_ups.py
src/routes/: data_routes.py  general_routes.py  task_routes.py
src/utils/: scanner.py  search_utils.py  synonyms.json
static/css/: accessibility.css  calendar.css  main.css  markdown.css  output.css
static/js/: accessibility.js  script-calendar.js  theme-toggle.js
static/js/fullcalendar/: main.min.css
templates/: add_objective.html  add_objetive.html  add_task.html  add_term.html  base.html  checklist.html  edit_objective.html  edit_objetive.html  edit_task.html  edit_term.html  glosario.html  index.html  scripts.html  scripts_detail.html  search.html  theory.html  theory_detail.html  writeups.html  writeups_detail.html
whoosh_index/: MAIN_awjfr4gdfzh1u8nr.seg  MAIN_c6zebvnbarxnwbn7.seg  MAIN_d6g15q0n2hwuz8yt.seg  MAIN_itjxlcc5fleksjkv.seg  MAIN_k1orizxoioyt21u8.seg  MAIN_vx8d6uc5wbuhul1b.seg  MAIN_y95qwe387ft6uxdk.seg  _MAIN_7.toc
